# minimind

./: .gitignore  dataset_download.py  dataset_opencc.py  eval_model.py  pyproject.toml  tokenizer.ipynb
model/: model_minimind.py  tokenizer.json
scripts/: convert_model.py  train_tokenizer.py
trainer/: train_full_sft.py  train_pretrain.py
